@@ -1,5 +1,7 @@
 2005-11-15  Kevin P. Fleming  <kpfleming@limerick.digium.com>
 
+	* channels/chan_sip.c (handle_request_info): properly forward 'flash' events received via SIP INFO (issue #5751, different patch)
+
 	* apps/app_disa.c (disa_exec): don't duplicate constant strings when not needed
 
 	* apps/app_playback.c (playback_exec): use correct logic tests for options (issue #5752)
